--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<h1>Marlon</h1>
+<!DOCTYPE html>
+<html lang="pt-BR">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfólio Marlon Clingio</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+  <img src="img/Marlon.jpeg" alt="Foto Perfil">
+</body>
+
+</html>
