feat: adjustments and improvements to the github io portfolio

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
         </div>
         <div class="skills-box">
           <p class="skills-title">Frameworks</p>
-          <i class="devicon-react-original colored"></i>
           <i class="devicon-nextjs-plain"></i>
-          <i class="devicon-nodejs-plain colored"></i>              
+          <i class="devicon-react-original colored"></i>
+          <i><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nodejs/nodejs-original.svg" id="nodejs_img"/></i>
           <i class="devicon-express-original"></i>
         </div>
         <div class="skills-box">
